@@ -2141,7 +2141,8 @@ bool FrameMac::sendContextMenuEvent(NSEvent *event)
 
     swallowEvent = v->dispatchMouseEvent(contextmenuEvent, mev.targetNode(), true, 0, mouseEvent, true);
     if (!swallowEvent && !isPointInsideSelection(viewportPos) &&
-        ([_bridge selectWordBeforeMenuEvent] || [_bridge isEditable] || mev.targetNode()->isContentEditable())) {
+            ([_bridge selectWordBeforeMenuEvent] || [_bridge isEditable]
+                || (mev.targetNode() && mev.targetNode()->isContentEditable()))) {
         _mouseDownMayStartSelect = true; // context menu events are always allowed to perform a selection
         selectClosestWordFromMouseEvent(mouseEvent, mev.targetNode());
     }
