@@ -1,0 +1,21 @@
+<style type="text/css">
+html:before, html:after {
+	content: "";
+	width: 50px;
+	height: 50px;
+	position: fixed;
+}
+html:before {
+	border: solid red 5px;
+}
+html:after {
+	border: solid green 5px;
+	top: 60px;
+}
+</style>
+
+<p>
+Test of crash when context-clicking on generated content.
+Do a control-click or a right-click in one of these two
+boxes, and make sure you don't see a crash.
+</p>
